-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
-
aarch64
Found while working on JDK-8301007 with enhanced StressCallingConvention flag.
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/workspace/open/src/hotspot/share/asm/macroAssembler_common.cpp:206), pid=2593338, tid=2593354
# guarantee(done) failed: Could not resolve circular dependency when shuffling inline type arguments
#
# JRE version: Java(TM) SE Runtime Environment (21.0) (fastdebug build 21-lworld4ea-LTS-2023-04-17-1449105.tobias.hartmann.valhalla)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 21-lworld4ea-LTS-2023-04-17-1449105.tobias.hartmann.valhalla, mixed mode, compressed oops, compressed class ptrs, g1 gc, linux-aarch64)
# Problematic frame:
# V [libjvm.so+0x13cfdc0] MacroAssembler::unpack_inline_args(Compile*, bool)+0x8ac
Current CompileTask:
C2: 6252 520 b compiler.valhalla.inlinetypes.TestCallingConvention::test23 (45 bytes)
Stack: [0x0000fffd36600000,0x0000fffd36800000], sp=0x0000fffd367fa340, free space=2024k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x13cfdc0] MacroAssembler::unpack_inline_args(Compile*, bool)+0x8ac (macroAssembler_common.cpp:206)
V [libjvm.so+0x32e4b4] MachVEPNode::emit(CodeBuffer&, PhaseRegAlloc*) const+0x154 (aarch64.ad:2195)
V [libjvm.so+0x159a39c] PhaseOutput::scratch_emit_size(Node const*)+0x2f8 (output.cpp:3338)
V [libjvm.so+0x15918a4] PhaseOutput::shorten_branches(unsigned int*)+0x2c4 (output.cpp:585)
V [libjvm.so+0x15a47c0] PhaseOutput::Output()+0xa10 (output.cpp:359)
V [libjvm.so+0x9ef57c] Compile::Code_Gen()+0x3fc (compile.cpp:3468)
V [libjvm.so+0x9f16e0] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x12d0 (compile.cpp:886)
V [libjvm.so+0x7f4e94] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x3f0 (c2compiler.cpp:113)
V [libjvm.so+0x9fe2fc] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xa18 (compileBroker.cpp:2237)
V [libjvm.so+0x9fed68] CompileBroker::compiler_thread_loop()+0x5b4 (compileBroker.cpp:1916)
V [libjvm.so+0xf321a0] JavaThread::thread_main_inner()+0x21c (javaThread.cpp:711)
V [libjvm.so+0x188b878] Thread::call_run()+0xf8 (thread.cpp:224)
V [libjvm.so+0x157a9e4] thread_native_entry(Thread*)+0x100 (os_linux.cpp:739)
C [libpthread.so.0+0x7908] start_thread+0x188
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/workspace/open/src/hotspot/share/asm/macroAssembler_common.cpp:206), pid=2593338, tid=2593354
# guarantee(done) failed: Could not resolve circular dependency when shuffling inline type arguments
#
# JRE version: Java(TM) SE Runtime Environment (21.0) (fastdebug build 21-lworld4ea-LTS-2023-04-17-1449105.tobias.hartmann.valhalla)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 21-lworld4ea-LTS-2023-04-17-1449105.tobias.hartmann.valhalla, mixed mode, compressed oops, compressed class ptrs, g1 gc, linux-aarch64)
# Problematic frame:
# V [libjvm.so+0x13cfdc0] MacroAssembler::unpack_inline_args(Compile*, bool)+0x8ac
Current CompileTask:
C2: 6252 520 b compiler.valhalla.inlinetypes.TestCallingConvention::test23 (45 bytes)
Stack: [0x0000fffd36600000,0x0000fffd36800000], sp=0x0000fffd367fa340, free space=2024k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x13cfdc0] MacroAssembler::unpack_inline_args(Compile*, bool)+0x8ac (macroAssembler_common.cpp:206)
V [libjvm.so+0x32e4b4] MachVEPNode::emit(CodeBuffer&, PhaseRegAlloc*) const+0x154 (aarch64.ad:2195)
V [libjvm.so+0x159a39c] PhaseOutput::scratch_emit_size(Node const*)+0x2f8 (output.cpp:3338)
V [libjvm.so+0x15918a4] PhaseOutput::shorten_branches(unsigned int*)+0x2c4 (output.cpp:585)
V [libjvm.so+0x15a47c0] PhaseOutput::Output()+0xa10 (output.cpp:359)
V [libjvm.so+0x9ef57c] Compile::Code_Gen()+0x3fc (compile.cpp:3468)
V [libjvm.so+0x9f16e0] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x12d0 (compile.cpp:886)
V [libjvm.so+0x7f4e94] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x3f0 (c2compiler.cpp:113)
V [libjvm.so+0x9fe2fc] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xa18 (compileBroker.cpp:2237)
V [libjvm.so+0x9fed68] CompileBroker::compiler_thread_loop()+0x5b4 (compileBroker.cpp:1916)
V [libjvm.so+0xf321a0] JavaThread::thread_main_inner()+0x21c (javaThread.cpp:711)
V [libjvm.so+0x188b878] Thread::call_run()+0xf8 (thread.cpp:224)
V [libjvm.so+0x157a9e4] thread_native_entry(Thread*)+0x100 (os_linux.cpp:739)
C [libpthread.so.0+0x7908] start_thread+0x188