8306301: [lworld] Circular dependency when unpacking